<resources>
    <string name="app_name">People</string>
    <string name="date_picker_title">Adjust the Date</string>
    <string name="options">Choose a Menu Option</string>
    <string name="view_all_peoples">View All Peoples</string>
    <string name="remove_people">Remove People</string>
    <string name="update_people">Update People</string>
    <string name="add_people">Add People</string>
    <string name="add_name">Name</string>
    <string name="add_description">Description</string>
    <string name="add_created_date">Created Date (DD/MM/YYYY)</string>
    <string name="add_updated_date">Updated Date (DD/MM/YYYY)</string>
    <string name="enter_people_id">Enter Your People Id</string>
    <string name="settings">Settings</string>
</resources>
