<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <TextView android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />
    <Button
        android:id="@+id/btn_add_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_people"/>

    <Button
        android:id="@+id/btn_edit_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_people"/>

    <Button
        android:id="@+id/btn_remove_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_people"/>

    <Button
        android:id="@+id/btn_view_peoples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_peoples"/>
</LinearLayout>