<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_name"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>
    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        android:padding="@dimen/view_padding"
        android:textSize="@dimen/add_edit_textsize"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding">

        <EditText
            android:id="@+id/et_created_date"
            android:hint="@string/add_created_date"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:gravity="left" />
        <ImageView
            android:id="@+id/image_view_created_date"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding">

        <EditText
            android:id="@+id/et_updated_date"
            android:hint="@string/add_updated_date"
            android:layout_width="wrap_content"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:gravity="left" />
        <ImageView
            android:id="@+id/image_view_updated_date"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/button_add_update_people"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_padding"
        android:text="@string/add_people"
        android:layout_gravity="center"/>
</LinearLayout>